# Seamless

./: .gitignore  CMakeLists.txt  build.bat  run.bat
include/: errors.h  net.c  net.h
include/auth/: auth.h
include/net/: conn.h  net.h
src/: errors.c  main.c
src/auth/: auth.c
src/net/: conn.c  net.c
